# Praktika_Cpp

./: .gitignore
p5/: CMakeLists.txt  aufgabe.txt  p5_oop.cpp  taschenrechner.cpp  taschenrechner.h
p6/: aufgabe.txt  komplexeZahl.cpp  komplexeZahl.h  p6_oop.cpp
